--- a/styles.css
+++ b/styles.css
@@ -25,22 +25,12 @@ canvas {
     flex-direction: column;
 }
 
-.buttonContainer {
-    height: 100vh;
-    width: 140px;
-    justify-content: space-evenly;
-}
-
-
-.radioContainer {
-    height: 100vh;
-    width: 120px;
-    justify-content: center;
-}
-
 .generateContainer {
     justify-content: space-evenly;
     align-items: center;
+    padding: 10px;
+    border: 2px solid white;
+    border-radius: 20px;
 }
 
 #generateInput {
@@ -48,12 +38,29 @@ canvas {
     margin: 5px 0px;
 }
 
+#gridSizeInputLabel {
+    color: white;
+}
 
-label * {
+/* search buttons */
+.buttonContainer {
+    height: 100vh;
+    width: 140px;
+    justify-content: space-evenly;
+}
+
+/* edit radio buttons */
+.radioContainer {
+    height: 100vh;
+    width: 120px;
+    justify-content: center;
+}
+
+.editLabel * {
     cursor: pointer;
 }
 
-button, label {
+button, .editLabel {
     background-color: white;
     color: black;
     margin: 5px 20px;
@@ -64,10 +71,10 @@ button, label {
     cursor: pointer;
 }
 
-button:hover, label:hover {
+button:hover, .editLabel:hover {
     background-color: #ddd;
 }
 
-button:active, label:active {
+button:active, .editLabel:active {
     background-color: #aaa;
 }
