--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,9 @@
+:root {
+    --clr-wall: #1B2430;
+    --clr-sidebar: #393E46;
+    --clr-light: #e8e8e8;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -5,35 +11,55 @@
 }
 
 body {
-    background-color: #1B2430;
+    background-color: var(--clr-wall);
     width: 100%;
     height: 100%;
     display: flex;
-    justify-content: space-between;
+    justify-content: left;
     align-items: center;
 }
 
 canvas {
-    background-color: #D6D5A8;
+    background-color: var(--clr-sidebar);
     height: 85vmin;
     aspect-ratio: 1 / 1;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%,-50%);
 }
 
 .flexColumn {
-    background-color: #393E46;
     display: flex;
     flex-direction: column;
-}
-
-.generateContainer {
-    justify-content: space-evenly;
     align-items: center;
-    padding: 10px;
-    border: 2px solid white;
-    border-radius: 20px;
 }
 
-#generateInput {
+.tabButton {
+    border-radius: 10px 10px 0px 0px;
+}
+
+.tabContent {
+    background-color: var(--clr-wall);
+    justify-content: center;
+    width: 120px;
+    border-radius: 15px;
+    padding: 15px 5px;
+    margin: 20px;
+    box-shadow: -3px -3px var(--clr-light);
+}
+
+.sidebar {
+    background-color: var(--clr-sidebar);
+    height: 100vh;
+    justify-content: space-around;
+}
+
+.tabButton {
+    margin-top: 0px 0px 0px; 
+}
+
+#gridSizeInput {
     width: 50px;
     margin: 5px 0px;
 }
@@ -42,18 +68,13 @@ canvas {
     color: white;
 }
 
-/* search buttons */
-.buttonContainer {
-    height: 100vh;
-    width: 140px;
-    justify-content: space-evenly;
+.editContainer {
 }
 
-/* edit radio buttons */
-.radioContainer {
-    height: 100vh;
-    width: 120px;
-    justify-content: center;
+.newMazeContainer {
+}
+
+.searchContainer {
 }
 
 .editLabel * {
@@ -63,7 +84,7 @@ canvas {
 button, .editLabel {
     background-color: white;
     color: black;
-    margin: 5px 20px;
+    margin: 5px 0px;
     padding: 5px 10px;
     border-radius: 20px;
     border: none;
