--- a/styles.css
+++ b/styles.css
@@ -17,14 +17,14 @@ body {
     width: 100%;
     height: 100%;
     display: flex;
-    justify-content: left;
+    justify-content: space-between;
     align-items: center;
     overflow: hidden;
 }
 
 canvas {
-    background-color: var(--clr-sidebar);
-    height: 85vmin;
+    background-color: var(--clr-wall);
+    height: 85vh;
     aspect-ratio: 1 / 1;
     position: absolute;
     left: 50%;
@@ -83,6 +83,10 @@ canvas {
 
 #newMazeContainer {
     display: none;
+}
+
+#newMazeContainer *, #searchContainer * {
+    width: 100px !important;
 }
 
 #searchContainer {
